--- a/frontend/gamifipy/package.json
+++ b/frontend/gamifipy/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^7.7.0",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
+    "react-window": "^1.8.11",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
