--- a/frontend/gamifipy/package.json
+++ b/frontend/gamifipy/package.json
@@ -21,6 +21,7 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "bootstrap": "^5.3.7",
+    "lucide-react": "^0.525.0",
     "primereact": "^10.9.6",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
