--- a/frontend/gamifipy/package.json
+++ b/frontend/gamifipy/package.json
@@ -33,6 +33,7 @@
     "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
     "react-window": "^1.8.11",
+    "remark-gfm": "^4.0.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
