--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.11-slim
 
 # Crear directorio de trabajo
 WORKDIR /app
+COPY backend ./backend
 
 # Copiar dependencias e instalarlas
 COPY requirements.txt .
@@ -12,4 +13,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Ejecutar FastAPI con uvicorn (sin --reload en producción)
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
