--- a/frontend/gamifipy/Dockerfile
+++ b/frontend/gamifipy/Dockerfile
@@ -8,12 +8,6 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# Etapa 2: servir con Nginx
+# Etapa 2: servir con Nginx base
 FROM nginx:stable-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
-
-# Sobrescribir configuración default de Nginx
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
