--- a/frontend/gamifipy/Dockerfile
+++ b/frontend/gamifipy/Dockerfile
@@ -8,6 +8,9 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# Etapa 2: servir con Nginx base
+# Etapa 2: servir con Nginx
 FROM nginx:stable-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
